# QR-Code-Scanner

./: .gitignore  CMakeLists.txt  FindPatern.cpp  FinderPaternModel.hpp  ImageBinarization.hpp  ImageReader.cpp  ImageReader.hpp  README.md
ausarbeitung/: einfuehrung.tex  einführung.tex  mitte.tex  preamble.tex  qrcode-blx.bib  qrcode.aux  qrcode.bbl  qrcode.bcf  qrcode.blg  qrcode.out  qrcode.run.xml  qrcode.tdo  qrcode.tex  quellen.bib  shorthands.tex  title.tex
ausarbeitung/chapters/: einfuehrung.tex  extrahierung.tex  generator.tex  identifikation.tex  normalisierung.tex  vorverarbeitung.tex
ausarbeitung/code/: binarize-run.cpp  findContours.cpp  global-binarize.cpp  local-binarize.cpp  similarity.cpp
data/: QR-Code Content.txt
src/: CMakeLists.txt  CodeFinder.cpp  CodeFinder.hpp  Filesystem.cpp  Filesystem.hpp  FindPatern.cpp  FindPatern.hpp  FindPattern.cpp  FindPattern.hpp  FinderPaternModel.cpp  FinderPaternModel.hpp  FinderPatternModel.cpp  FinderPatternModel.hpp  Generate.cpp  Generate.hpp  Generator.cpp  ImageBinarization.cpp  ImageBinarization.hpp  ImageReader.cpp  ImageReader.hpp  README.txt  main.cpp
src/Header/: CodeFinder.hpp  Filesystem.hpp  FindPattern.hpp  FinderPatternModel.hpp  Generator.hpp  ImageBinarization.hpp
src/Source/: CodeFinder.cpp  Filesystem.cpp  FindPattern.cpp  FinderPatternModel.cpp  Generator.cpp  ImageBinarization.cpp  main.cpp
